task-02 gap fixed

--- a/src/css/common.css
+++ b/src/css/common.css
@@ -33,7 +33,7 @@ img {
 .timer {
   display: flex;
   justify-content: space-between;
-  gap: 10px;
+  gap: 14px;
 }
 
 
@@ -41,10 +41,6 @@ img {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-.field:last-child {
-  margin-left: 11px;
 }
 
 .value {
